# RPi_Logger

./: .gitignore  AGENTS.md  ARCHITECTURE_PLAN.md  AUDIT_REPORT.md  AppImageBuilder.yml  BUGFIX_LORES_STREAM.md  CLAUDE.md  CLI_MODE.md  CLI_QUICK_START.txt  PICAMERA2_OPTIMIZATION_CHANGES.md  PLAN.md  PLAN_NOTES_INTEGRATION.md  PR_DESCRIPTION.md  README.md  REFACTOR_PLAN.md  TEST_PICAMERA2_OPTIMIZATION.md  TEST_SUMMARY.md  VOG_CLEANUP_STATUS.md  VOG_PORT_PLAN.md  VOG_REFACTOR_PLAN.md  build_macos.sh  cli_utils.py  config.txt  debug_eyetracker.py  demo_run.sh  discover_usb_devices.py  install_autostart.sh  main.py  main_logger.py  muxing_tool.py  package-lock.json  pyproject.toml  pytest.ini  rpi-logger.service  rpi_logger.spec  running_modules.json  start_logger.sh  test_all_modules.sh  test_async_changes.py  test_async_core.py  (+14 more)
.claude/: .gitignore
.claude/agents/: code-cleanup-archaeologist.md  codebase-analyzer.md  docs-architect.md
.claude/commands/: architect.md
.github/workflows/: build-nuitka.yml  build-release.yml  test.yml
Modules/Audio/: README.md  __init__.py  app.py  audio_runtime.py  config.txt  main_audio.py  runtime.py  startup.py  state.py
Modules/Audio (stub)/: README.md  __init__.py  audio_runtime.py  config.txt  main_audio_stub.py
Modules/AudioRecorder/: README.md  audio_monitor_fast.py  config.txt  main_audio.py
data/: 18_2025-10-23.txt  DRT__dev_ttyACM0_20251023_151411.csv  DRT__dev_ttyACM0_20251023_153231.csv  DRT__dev_ttyACM0_20251023_153510.csv  DRT__dev_ttyACM0_20251023_153834.csv  DRT__dev_ttyACM0_20251023_154347.csv  DRT__dev_ttyACM0_20251023_154807.csv  DRT__dev_ttyACM0_20251023_155334.csv  DRT__dev_ttyACM0_20251023_155634.csv  DRT__dev_ttyACM0_20251023_155916.csv  DRT__dev_ttyACM0_20251023_161127.csv  DRT__dev_ttyACM0_20251023_162107.csv  DRT__dev_ttyACM0_20251023_164950.csv  DRT__dev_ttyACM0_20251023_165109.csv  DRT__dev_ttyACM0_20251023_165338.csv  DRT__dev_ttyACM0_20251023_171716.csv  DRT__dev_ttyACM0_20251023_172137.csv  running_modules.json
docs/: AUTOMATION_API_PLAN.md  CODEBASE_SIMPLIFICATION_PLAN.md  DATA_VALIDATION_TEST_PLAN.md  DEVICE_WINDOW_STATE_LOGIC.md  LOGGING.md  MASTER_DEVICE_ARCHITECTURE_PLAN.md  TASK_BREAKDOWN.md  TEST_REORGANIZATION_PLAN.md  cameras2_plan.md  cameras2_structure.md  cameras_plan.md  cameras_structure.md  dashboard_ui.md  device_connection_state_refactor.md  device_system_consolidation_plan.md  eye_tracker_refactor_plan.md  help_dialog_update_plan.md  usb_webcam_architecture.md
hooks/: hook-vmc.py
logger_core/: __init__.py  async_bridge.py  config_manager.py  event_logger.py  logger_system.py  logging_config.py  module_discovery.py  module_manager.py  module_process.py  paths.py  session_manager.py  shutdown_coordinator.py  window_manager.py
modules/: __init__.py
rpi_logger/: __init__.py  __main__.py
tests/: README.md  conftest.py  test_audio.py  test_audio_stub.py  test_camera_module.py  test_cameras_runtime.py  test_cameras_storage.py  test_cameras_stub_runtime.py  test_cameras_stub_storage.py  test_config_manager.py  test_config_paths.py  test_csi_capture_debug.py  test_drt.py  test_eye_tracker.py  test_frame_convert.py  test_module_discovery.py  test_preferences.py  test_subprocess_capture.py
ui/: __init__.py  backend.py  dashboard.css  dashboard.py
utils/: README.md  __init__.py  pi_serial_monitor.py  sync_and_mux.py  test_module_lifecycle.py
(+1386 files in other folders)
