[project]
name = "rpi-logger"
version = "0.1.0"
description = "Cross-platform logger system with Raspberry Pi camera support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "sounddevice>=0.4.6",
    "pupil-labs-realtime-api>=1.0.0",
    "aiofiles>=23.0.0",
    "psutil>=5.9.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pyserial-asyncio>=0.6",
    "tkintermapview>=1.29",
    "soundfile>=0.13.1",
    "async-tkinter-loop>=0.10.2",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rpi-logger = "rpi_logger.app.master:run"
rpi-logger-mux = "rpi_logger.tools.muxing_tool:main"
rpi-logger-sync = "rpi_logger.tools.sync_and_mux:cli"

[tool.hatch.build.targets.wheel]
packages = ["rpi_logger"]
