[project]
name = "rpi-logger"
version = "0.1.0"
description = "Cross-platform logger system with Raspberry Pi camera support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "sounddevice>=0.4.6",
    "pupil-labs-realtime-api>=1.0.0",
    "aiofiles>=23.0.0",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
    "pyserial-asyncio>=0.6",
    "soundfile>=0.13.1",
    "async-tkinter-loop>=0.10.2",
    "matplotlib>=3.7.0",
    "digi-xbee>=1.5.0",
    "zeroconf>=0.131.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "appimage-builder>=1.0.0; sys_platform == 'linux'",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
]
xbee = [
    "digi-xbee>=1.4.1",
]
tile-downloader = [
    "tkintermapview>=1.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rpi-logger = "rpi_logger.app.master:run"
rpi-logger-mux = "rpi_logger.tools.muxing_tool:main"
rpi-logger-sync = "rpi_logger.tools.sync_and_mux:cli"

[tool.hatch.build.targets.wheel]
packages = ["rpi_logger"]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'armv7l'",
]
